# wifiled-firmware

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
cyw43-firmware/: README.md
src/: credentials.rs  main.rs
