[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "firmware"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
embedded-time = "0.12"
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }
usb-device = "0.2"
critical-section = { version = "1.0.0" }
pio = "0.2"
pio-proc = "0.2"
libm = "0.2.8"
usbd-serial = "0.2.0"
