[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "firmware"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
pio = "0.2"
pio-proc = "0.2"
libm = "0.2.8"
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "986eca1b1210d081d3e2f70702d8248c7ef5286b", features = ["unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "986eca1b1210d081d3e2f70702d8248c7ef5286b", features = [] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "986eca1b1210d081d3e2f70702d8248c7ef5286b", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "986eca1b1210d081d3e2f70702d8248c7ef5286b" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "986eca1b1210d081d3e2f70702d8248c7ef5286b", features = ["tcp", "dhcpv4"] }
fixed = "1.24.0"
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "986eca1b1210d081d3e2f70702d8248c7ef5286b" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "986eca1b1210d081d3e2f70702d8248c7ef5286b", features = ["overclock"] }
